# SHA512_gpu_shadowfile_cracker

./: .gitignore  Cargo.toml  LICENSE  README.md  debug_test.rs
src/: cpu_cracker.rs  gpu_cracker.rs  gpu_cracker_metal.rs  main.rs  mask.rs  progress.rs  wordlist.rs
