[package]
name = "gpu_password_cracker"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10"
sha-crypt = "0.5"
metal = "0.27"
objc = "0.2"
clap = { version = "4.0", features = ["derive"] }
rayon = "1.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.17"
rand = "0.8"
anyhow = "1.0"
tempfile = "3.8"
